--- a/vercel.json
+++ b/vercel.json
@@ -5,27 +5,10 @@
     "outputDirectory": "dist",
     "installCommand": "npm install",
     "devCommand": "npm run dev",
-    "routes": [
+    "rewrites": [
         {
-            "src": "/sw.js",
-            "headers": {
-                "Cache-Control": "no-cache"
-            },
-            "dest": "/sw.js"
-        },
-        {
-            "src": "/manifest.json",
-            "headers": {
-                "Content-Type": "application/manifest+json"
-            },
-            "dest": "/manifest.json"
-        },
-        {
-            "handle": "filesystem"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ],
     "headers": [
